# fluxxx

./: .dockerignore  .gitignore  CMakeLists.txt  CmakeLists.txt  Dockerfile  README.md  Taskfile.yml  config.cfg  matrix_wrapper.py
include/: class.hpp  config.hpp  constant.hpp  coupling.hpp  distribution.hpp  flow.hpp  generator.hpp  integrand.hpp  integrator.hpp  lorentz.hpp  loss.hpp  mask.hpp  parser.hpp  profiler.hpp  sampler.hpp  trainable.hpp  trainer.hpp  transform.hpp  wrapper.hpp
scripts/: install_libtorch.sh  install_mg.sh  install_python.sh  requirements.txt  run.mg5  run.sh
src/: class.cpp  coupling.cpp  distribution.cpp  flow.cpp  generator.cpp  integrand.cpp  intergator.cpp  lorentz.cpp  loss.cpp  main.cpp  mask.cpp  sampler.cpp  trainable.cpp  trainer.cpp  transform.cpp  wrapper.cpp
